<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">工具大师</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_of_wifi">WiFi信息</string>
    <string name="title_of_wifi_null">您还没有连接过WiFi</string>
    <string name="export_to">导出到：</string>
    <string name="import_from">从指定文件导入：</string>
    <string name="replace_existing_contacts">替换已有联系人</string>
    <string name="export_contacts_title">导出/导入联系人</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="title_of_qrcode">二维码扫描/生成</string>
    <string name="title_of_screenshot">截屏</string>
    <string name="screenshot_once">点击单屏截图后，可以切换到任意界面，摇动手机截取图片，点击结束按钮停止截图，所有图片单独保存。</string>
    <string name="screenshot_more">点击连续截图后，可以切换到任意界面，摇动手机截取图片，点击结束按钮停止截图，所有截图会以一张纵向长图的方式保存。
        在连续截图时想切换到单屏截图，需要先点击结束按钮停止连续截图（限制最多连续截图15次）</string>
    <string name="stop_shot">停止截屏</string>
</resources>